src/main/resources/stylesheets/TransparentApplicationViewStylesheet.css
#listModuleNotWorking {
    -fx-pref-width: 70px;
    -fx-max-width: 70px;
}

#listDebugLog {
    -fx-min-width: 200px;
    -fx-max-width: 500px;
    -fx-max-height: 400px;
    -fx-background-color: rgba(0, 0, 0, 0.7);
}

#listDebugLog .label {
    -fx-font-size: 12px;
}

#textTFDebug {
    -fx-min-width: 200px;
    -fx-max-width: 400px;
    -fx-max-height: 120px;
    -fx-background-color: rgba(0, 0, 0, 0.7);
    -fx-padding: 10 10 10 10;
}

#expansionPane {
    -fx-padding: 16px;
    -fx-max-width: 400px;
    -fx-max-height: 500px;
    -fx-alignment: center-right;
    -fx-background-color: rgba(0, 0, 0, 0.7);
}

#expansionName {
    -fx-font-size: 30px;
    -fx-font-weight: bold;
}

#expansionImage {
    -fx-fit-to-width: 150px;
    -fx-fit-to-height: 200px;
    -fx-alignment: center;
}

#expansionInformation {
    -fx-wrap-text: true;
}

#expansionScrollPane {
    -fx-background-color: transparent;
    -fx-max-height: 250px;
}

#listPoiMaps {
    -fx-orientation: horizontal;
    -fx-pref-height: 150px;
    -fx-max-height: 150px;
    -fx-background-color: rgba(0, 0, 0, 0.5);
}

#listPoiCamera {
    -fx-orientation: horizontal;
    -fx-pref-height: 150px;
    -fx-max-height: 150px;
    -fx-background-color: rgba(0, 0, 0, 0.5);
}

#pnFoundation {
    -fx-background-color: transparent;
}

#listModuleStatus {
    -fx-pref-width: 70px;
    -fx-max-width: 70px;
}

#listExpressionStatus {
    -fx-pref-width: 70px;
    -fx-max-width: 70px;
}

.label {
    -fx-font-size: 20px;
    -fx-font-family: "Helvetica Neue";
    -fx-text-fill: white;
    -fx-background-color: transparent;
}

.button {
    -fx-font-size: 20px;
    -fx-font-family: "Helvetica Neue";
    -fx-font-weight: bold;
    -fx-text-fill: white;
    -fx-background-color: black;
}

.button:hover {
    -fx-background-color: dimgrey;
}

.scroll-pane > .viewport {
    -fx-background-color: transparent;
}

.scroll-pane {
    -fx-background-color: transparent;
}

.list-view {
    -fx-background-color: transparent;
}

.list-cell {
    -fx-background-color: transparent;
}

.list-cell:odd {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:focused {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:focused:odd {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:filled:focused:selected {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:filled:selected, .list-view:focused .list-cell:filled:selected:hover {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:filled:focused:selected:hover {
    -fx-background-color: transparent;
}

.list-cell:filled:selected:focused, .list-cell:filled:selected, .list-view:horizontal .list-cell:filled:selected {
    -fx-background-color: transparent;
}

.list-cell:filled:selected:focused:disabled, .list-cell:filled:selected:disabled {
    -fx-background-color: transparent;
}

.list-cell:filled:hover {
    -fx-background-color: transparent;
}

.list-view:focused .list-cell:filled:focused:hover {
    -fx-background-color: transparent;
}

.list-view:horizontal .list-cell:filled:selected, .list-view:horizontal .list-cell:filled:selected:hover {
    -fx-background-color: transparent;
}

#togglePane {
    -fx-min-width: 200px;
    -fx-max-width: 500px;
    -fx-max-height: 400px;
    -fx-background-color: rgba(0, 0, 0, 0.7);
}

